--- a/src/components/OnlineMba/OnlineMbaHeader/OnlineMbaHeader.css
+++ b/src/components/OnlineMba/OnlineMbaHeader/OnlineMbaHeader.css
@@ -84,7 +84,7 @@
   align-items: center;
   gap: 20px;
 }
-.onlineHeader-btnContainer > button {
+/* .onlineHeader-btnContainer > button {
   padding: 10px;
   font-size: 18px;
   border-radius: 10px;
@@ -96,10 +96,13 @@
   &:hover {
     background-color: #ffac1d;
   }
-}
+} */
 .onlineHeader-content > img {
   width: 300px;
+  width: fit-content;
+  height: 100%;
 }
+
 .onlineHeader-btnContainer > a > button {
   padding: 10px;
   font-size: 18px;
@@ -108,16 +111,54 @@
   border: none;
   color: white;
   border: solid 2px var(--accentColor1);
-  color: var(--accentColor1);
+  color: white;
   width: 200px;
   font-weight: bold;
+  transition: 1s ease;
   &:hover {
     border: solid 2px var(--accentColor1);
-    color: var(--accentColor1);
-    background-color: #f59f0b4b;
+    background: linear-gradient(
+      45deg,
+      #ff512f 0%,
+      #f09819 51%,
+      #ff512f 100%
+    );
+    
   }
 }
-.onlineHeader-content > img {
-  width: fit-content;
-  height: 100%;
+
+.button-87 {
+  margin: 10px;
+  padding: 15px 20px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  border-radius: 10px;
+  display: block;
+  border: 0px;
+  font-weight: 700;
+  box-shadow: 0px 0px 14px -7px #f09819;
+  background-image: linear-gradient(
+    45deg,
+    #ff512f 0%,
+    #f09819 51%,
+    #ff512f 100%
+  );
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-87:hover {
+  background-position: right center;
+  /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+}
+
+.button-87:active {
+  transform: scale(0.95);
 }
