--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -10,6 +10,12 @@
   z-index: 9999;
   background-color: white;
 }
+.menu-wrapper {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  /* border: solid; */
+}
 .logo-container {
   padding: 20px;
 }
@@ -109,3 +115,114 @@
 .menu-content > ul > li > a.active {
   color: var(--accentColor1);
 }
+.repMenu-container {
+  /* border: solid red; */
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 20px;
+  width: 100%;
+}
+.respMenu-icon {
+  font-size: 40px;
+  color: var(--accentColor1);
+  display: none;
+}
+/* Sidebar (mobile) */
+.repMenu-content {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 70%;
+  height: 100vh;
+  background-color: white;
+  z-index: 10000;
+  padding-top: 60px;
+  display: flex;
+  flex-direction: column;
+  /* Start hidden with translateX */
+  transform: translateX(100%);
+  transition: transform 0.3s ease-in-out;
+}
+
+/* Slide in when open */
+.repMenu-content.show {
+  transform: translateX(0);
+}
+
+.close-icon {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.repMenu-content>ul {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  margin-top: 20px;
+  padding-left: 20px;
+}
+
+.repMenu-content  ul li a {
+  text-decoration: none;
+  color:black;
+  font-size: 18px;
+
+}
+
+.repMenu-content  li a.active {
+  color: var(--accentColor1);
+  font-weight: 700;
+}
+
+/* Hamburger icon */
+.respMenu-icon {
+  display: none;
+  font-size: 40px;
+  color: var(--accentColor1);
+  cursor: pointer;
+}
+.respMenu-iconX{
+    display: none;
+  font-size: 40px;
+  color: var(--accentColor1);
+  cursor: pointer;
+}
+/* Responsive */
+@media screen and (max-width: 768px) {
+  .menu-content {
+    display: none;
+  }
+  .repMenu-container {
+    display: flex;
+  }
+  .respMenu-icon {
+    display: flex;
+  }
+}
+
+.repMenu-content > ul > li {
+  list-style: none;
+}
+@media screen and (max-width: 768px) {
+  .menu-content {
+    display: none;
+  }
+  .logo-container > a > img {
+    width: 150px;
+    height: 80px;
+    object-fit: cover;
+  }
+  .navbar-container {
+    /* border: solid red; */
+    height: 80px;
+    width: 100%;
+  }
+}
+/* Hamburger icon visible on mobile */
+
+
