--- a/src/components/HomePage/HomeAbout/HomeAbout.css
+++ b/src/components/HomePage/HomeAbout/HomeAbout.css
@@ -38,3 +38,21 @@
   object-fit: cover;
   border-radius: 20px;
 }
+@media screen and (max-width: 768px) {
+  .homeAbout-wrapper {
+    flex-direction: column-reverse;
+  }
+  .homeAbout-content {
+    width: 100%;
+    height: 100%;
+    /* border: solid blue; */
+    padding: 20px;
+  }
+  .homeAbout-content > h2 {
+    font-size: 30px;
+    text-align: center;
+  }
+  .homeAbout-content > img {
+    width: 100%;
+  }
+}
