--- a/src/components/HomePage/HomeAcc/HomeAcc.css
+++ b/src/components/HomePage/HomeAcc/HomeAcc.css
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   padding: 10px;
 }
 .homeAccHead-container {
@@ -19,8 +20,7 @@
   font-size: 40px;
 }
 
-.homeAccHead-container > h2>span {
-  font-size: 40px;
+.homeAccHead-container > h2 > span {
   color: var(--accentColor1);
 }
 .homeAcc-cardContainer {
@@ -78,56 +78,7 @@
 }
 
 @media screen and (min-width: 320px) and (max-width: 768px) {
-  .homeGovernmentHead-container > h2::after {
-    content: "";
-    position: absolute;
-    display: none;
-  }
-  .homeGovernmentHead-container {
-    flex-direction: column;
-  }
-  .homeAcc-container {
-    /* border: solid blue; */
-    padding: 20px;
-    flex-direction: column;
-    gap: 30px;
-  }
-  .homeAcc-cardContainer {
-    /* border: solid; */
-    width: 100%;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 100%;
-    margin: 20px;
-  }
+  .homeAccHead-container > h2 {
+  font-size: 30px;
 }
-@media screen and (min-width: 769px) and (max-width: 990px) {
-  .homeGovernmentHead-container > h2::after {
-    content: "";
-    position: absolute;
-    display: none;
-  }
-  .homeGovernmentHead-container {
-    flex-direction: column;
-  }
-  .homeAcc-container {
-    /* border: solid blue; */
-    padding: 20px;
-    flex-wrap: wrap;
-    gap: 30px;
-    width: 100%;
-  }
-  .homeAcc-cardContainer {
-    /* border: solid; */
-    width: 200px;
-    height: 200px;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 100%;
-    margin: 20px;
-  }
 }
