--- a/src/components/OnlineMba/OnlineMbaHeader/OnlineMbaHeader.css
+++ b/src/components/OnlineMba/OnlineMbaHeader/OnlineMbaHeader.css
@@ -117,13 +117,7 @@
   transition: 1s ease;
   &:hover {
     border: solid 2px var(--accentColor1);
-    background: linear-gradient(
-      45deg,
-      #ff512f 0%,
-      #f09819 51%,
-      #ff512f 100%
-    );
-    
+    background: linear-gradient(45deg, #ff512f 0%, #f09819 51%, #ff512f 100%);
   }
 }
 
@@ -161,4 +155,67 @@
 
 .button-87:active {
   transform: scale(0.95);
+}
+@media screen and (max-width: 768px) {
+  .onlineHeader-container {
+    /* border: solid red; */
+    width: 100%;
+    height: fit-content;
+    position: relative;
+    background-color: var(--customColor1);
+  }
+  .onlineHeader-cover {
+    /* border: solid green; */
+    flex-direction: column;
+    position: static;
+  }
+  .onlineHeader-content {
+    /* border: solid blue; */
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+  }
+  .onlineHeader-content:nth-child(2) {
+    /* border: solid blue; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 0px;
+  }
+  .onlineHeader-content > h6 {
+    color: var(--accentColor1);
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+  }
+
+  .onlineHeader-content > h2 {
+    color: var(--customColor2);
+    font-size: 30px;
+    text-align: center;
+  }
+  .onlineHeader-content > p {
+    color: white;
+    font-size: 18px;
+    text-align: center;
+  }
+  .onlineHeader-content > img {
+    width: 100%;
+    height: 100%;
+  }
+  .onlineHeader-btnContainer {
+    /* border: solid red; */
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 20px;
+    flex-direction: column;
+  }
 }
