--- a/src/components/OnlineMba/OnlineMbaUniversities/OnlineMbaUniversities.css
+++ b/src/components/OnlineMba/OnlineMbaUniversities/OnlineMbaUniversities.css
@@ -9,8 +9,7 @@
 }
 
 .universities-headContainer > h2 {
-  font-size: 2.5rem;
-  font-weight: 700;
+  font-size: 40px;
   color: #222;
 }
 
@@ -107,7 +106,7 @@
 
 .uni-btn:hover {
   transform: scale(1.05);
-  background:#e69201 ;
+  background: #e69201;
 }
 /* Stats Container */
 .uni-stats {
@@ -148,4 +147,10 @@
 .stat-extra {
   font-size: 0.8rem;
   color: #666;
+}
+@media screen and (max-width: 768px) {
+  .universities-headContainer > h2 {
+    font-size: 30px;
+
+  }
 }
