--- a/src/components/ProgramPage/ProgramCourses/ProgramCourses.css
+++ b/src/components/ProgramPage/ProgramCourses/ProgramCourses.css
@@ -101,3 +101,48 @@
   font-size: 15px;
   text-align: justify;
 }
+@media screen and (max-width: 768px) {
+  .programCourse-container {
+    /* border: solid red; */
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+  }
+  .programCourse-head > h2 {
+    font-size: 30px;
+    text-align: center;
+  }
+  .programCourse-wrapper {
+    /* border: solid green; */
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .programCourse-card {
+    /* border: solid brown; */
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    box-shadow: 0 0 5px black;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    margin-top: 20px;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .programCourse-img {
+    width: 100%;
+    height: 100%;
+  }
+  .programCourse-content {
+    /* border: solid teal; */
+    width: 100%;
+  }
+}
