--- a/src/components/ProgramPage/ProgramHeader/ProgramHeader.css
+++ b/src/components/ProgramPage/ProgramHeader/ProgramHeader.css
@@ -147,3 +147,60 @@
 .button-87:active {
   transform: scale(0.95);
 }
+@media screen and (max-width: 768px) {
+  .programHeader-container {
+    /* border: solid red; */
+    width: 100%;
+    height: 100%;
+    background-color: var(--customColor1);
+  }
+  .programHeader-cover {
+    /* border: solid green; */
+    position: static;
+    flex-direction: column;
+  }
+  .programHeader-content {
+    /* border: solid blue; */
+    width: 100%;
+    height: 100%;
+  }
+  .programHeader-content > h6 {
+    color: var(--accentColor1);
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+  }
+  .programHeader-content > h2 {
+    color: var(--customColor2);
+    font-size: 30px;
+    text-align: center;
+  }
+  .programHeader-content > p {
+    color: white;
+    font-size: 18px;
+    text-align: center;
+  }
+  .programHeader-content:nth-child(2) {
+    /* border: solid blue; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .programHeader-content > ul {
+    margin: 0;
+    padding: 0;
+    /* border: solid yellow; */
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+  .programHeader-btnContainer {
+    /* border: solid red; */
+    flex-direction: column;
+    gap: 20px;
+  }
+}
