--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -118,7 +118,7 @@
 .repMenu-container {
   /* border: solid red; */
   height: 100%;
-  display: flex;
+  display: none;
   justify-content: flex-end;
   align-items: center;
   padding: 20px;
