--- a/src/components/PopupForm/PopupForm.css
+++ b/src/components/PopupForm/PopupForm.css
@@ -97,3 +97,26 @@
   color: red;
   cursor: pointer;
 }
+@media screen and (max-width: 768px) {
+  .popup-wrapper {
+    background: white;
+    border-radius: 12px;
+    overflow: hidden;
+    display: flex;
+    height: fit-content;
+    width: 90%;
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.25);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+  }
+  .popup-content {
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+  .popup-content > img {
+    display: none;
+  }
+}
