--- a/src/components/OnlineMba/OnlineMbaHeader/OnlineMbaHeader.css
+++ b/src/components/OnlineMba/OnlineMbaHeader/OnlineMbaHeader.css
@@ -156,6 +156,27 @@
 .button-87:active {
   transform: scale(0.95);
 }
+.onlineHeader-content > ul {
+  margin: 0;
+  padding: 0;
+  /* border: solid yellow; */
+}
+.onlineHeader-content > ul > li {
+  border: solid white;
+  list-style: none;
+  background-color: white;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  border-radius: 10px;
+}
+.onlineHeader-content > ul > li > img {
+  width: 70px;
+  height: 70px;
+  object-fit: contain;
+}
 @media screen and (max-width: 768px) {
   .onlineHeader-container {
     /* border: solid red; */
@@ -217,5 +238,16 @@
     align-items: center;
     gap: 20px;
     flex-direction: column;
+  }
+    .onlineHeader-content > ul {
+    margin: 0;
+    padding: 10px;
+    /* border: solid yellow; */
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
   }
 }
