--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,13 +2,13 @@
   /* border: solid red; */
   width: 100%;
   height: 100%;
-  padding: 20px;
-  background-color: white;
+  padding: 10px;
+  background-color: var(--customBg1);
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-.footer-content > b {
+.footer-item > b {
   color: var(--accentColor1);
 }
