onlime mba changes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,5 +10,5 @@
   --customBg1: #f5f5f5;
   --textColor1: #111827;
   --accentColor1: #f59e0b;
-  --neutralColor: #e5e7eb;
+  --neutralColor: #fce4be;
 }
