--- a/src/components/ContentHeader/ContentHeader.css
+++ b/src/components/ContentHeader/ContentHeader.css
@@ -1,24 +1,253 @@
 .contentHeader-container {
-  border: solid red;
+  /* border: solid red; */
   width: 100%;
   height: 600px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   position: relative;
-}
-.contentHeader-cover {
-  border: solid blue;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.47);
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 .contentHeader-container > img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+.contentHeader-cover {
+  /* border: solid green; */
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.47);
+  padding: 0px;
+}
+.contentHeader-content {
+  /* border: solid blue; */
+  width: 47%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+}
+.contentHeader-content:nth-child(2) {
+  /* border: solid blue; */
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  flex-direction: column;
+  padding: 0px;
+}
+.contentHeader-content > h6 {
+  color: var(--accentColor1);
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.contentHeader-content > h2 {
+  color: white;
+  font-size: 50px;
+}
+.contentHeader-content > p {
+  color: white;
+  font-size: 20px;
+}
+.contentHeader-content > ul {
+  margin: 0;
+  padding: 0;
+  /* border: solid yellow; */
+}
+.contentHeader-content > ul > li {
+  border: solid white;
+  list-style: none;
+  background-color: white;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  border-radius: 10px;
+}
+.contentHeader-content > ul > li > img {
+  width: 70px;
+  height: 70px;
+  object-fit: contain;
+}
+.contentHeader-btnContainer {
+  /* border: solid red; */
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
+}
+/* .contentHeader-btnContainer > button {
+  padding: 10px;
+  font-size: 18px;
+  border-radius: 10px;
+  background-color: var(--accentColor1);
+  border: none;
+  color: white;
+  width: 200px;
+  font-weight: bold;
+  &:hover {
+    background-color: #ffac1d;
+  }
+} */
+.contentHeader-content > img {
+  width: 300px;
+  width: fit-content;
+  height: 100%;
+}
+
+.contentHeader-btnContainer > a > button {
+  padding: 10px;
+  font-size: 18px;
+  border-radius: 10px;
+  background-color: transparent;
+  border: none;
+  color: white;
+  border: solid 2px var(--accentColor1);
+  color: white;
+  width: 200px;
+  font-weight: bold;
+  transition: 1s ease;
+  &:hover {
+    border: solid 2px var(--accentColor1);
+    background: linear-gradient(45deg, #ff512f 0%, #f09819 51%, #ff512f 100%);
+  }
+}
+
+.button-87 {
+  margin: 10px;
+  padding: 15px 20px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  border-radius: 10px;
+  display: block;
+  border: 0px;
+  font-weight: 700;
+  box-shadow: 0px 0px 14px -7px #f09819;
+  background-image: linear-gradient(
+    45deg,
+    #ff512f 0%,
+    #f09819 51%,
+    #ff512f 100%
+  );
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-87:hover {
+  background-position: right center;
+  /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+}
+
+.button-87:active {
+  transform: scale(0.95);
+}
+.contentHeader-content > ul {
+  margin: 0;
+  padding: 0;
+  /* border: solid yellow; */
+}
+.contentHeader-content > ul > li {
+  border: solid white;
+  list-style: none;
+  background-color: white;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  border-radius: 10px;
+}
+.contentHeader-content > ul > li > img {
+  width: 70px;
+  height: 70px;
+  object-fit: contain;
+}
+@media screen and (max-width: 768px) {
+  .contentHeader-container {
+    /* border: solid red; */
+    width: 100%;
+    height: fit-content;
+    position: relative;
+    background-color: var(--customColor1);
+  }
+  .contentHeader-cover {
+    /* border: solid green; */
+    flex-direction: column;
+    position: static;
+  }
+  .contentHeader-content {
+    /* border: solid blue; */
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+  }
+  .contentHeader-content:nth-child(2) {
+    /* border: solid blue; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 0px;
+  }
+  .contentHeader-content > h6 {
+    color: var(--accentColor1);
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+  }
+
+  .contentHeader-content > h2 {
+    color: white;
+    font-size: 30px;
+    text-align: center;
+  }
+  .contentHeader-content > p {
+    color: white;
+    font-size: 18px;
+    text-align: center;
+  }
+  .contentHeader-content > img {
+    width: 100%;
+    height: 100%;
+  }
+  .contentHeader-btnContainer {
+    /* border: solid red; */
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 20px;
+    flex-direction: column;
+  }
+    .contentHeader-content > ul {
+    margin: 0;
+    padding: 10px;
+    /* border: solid yellow; */
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
 }
