--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,12 +3,12 @@
   width: 100%;
   height: 100%;
   padding: 10px;
-  background-color: var(--customBg1);
+  background-color: var(--accentColor1);
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 .footer-item > b {
-  color: var(--accentColor1);
+  color: white;
 }
