--- a/src/components/OnlineMba/OnlineMbaUniversities/OnlineMbaUniversities.css
+++ b/src/components/OnlineMba/OnlineMbaUniversities/OnlineMbaUniversities.css
@@ -1,6 +1,7 @@
 .universities-container {
   width: 100%;
   padding: 50px 20px;
+  background-color: var(--customBg1);
 }
 
 .universities-headContainer {
