--- a/src/components/Styles.css
+++ b/src/components/Styles.css
@@ -295,7 +295,7 @@
 }
 /* ------------------------------slugContent---------------------------------------- */
 .slugContent-wrapper {
-  padding: 20px;
+  padding:0 70px;
 }
 .slugContent-container {
   width: 100%;
