--- a/src/components/ProgramPage/ProgramCourses/ProgramCourses.css
+++ b/src/components/ProgramPage/ProgramCourses/ProgramCourses.css
@@ -159,7 +159,7 @@
 .mba-container {
   display: grid;
   grid-template-columns: 1fr 1fr; /* 2 columns */
-  border: 1px solid #000;
+  border: 1px solid var(--accentColor1);
   border-radius: 5px;
   overflow: hidden;
   max-width: 1200px;
@@ -170,8 +170,8 @@
 .mba-item {
   padding: 16px 20px;
   font-size: 15px;
-  border-bottom: 1px solid #ccc;
-  border-right: 1px solid #ccc;
+  border-bottom: 1px solid var(--accentColor1);
+  border-right: 1px solid var(--accentColor1);
   transition: background 0.3s;
 }
 
@@ -187,7 +187,7 @@
 }
 
 /* 🎯 row striping */
-.mba-item:nth-child(4n + 1),
+/* .mba-item:nth-child(4n + 1),
 .mba-item:nth-child(4n + 2) {
   background-color: #ffeed2;
 }
@@ -195,12 +195,15 @@
 .mba-item:nth-child(4n + 1):hover,
 .mba-item:nth-child(4n + 2):hover {
   background-color: #fce4be;
-}
+} */
 
 .mba-item:hover {
-  background-color: #f9f9f9;
+  background-color: var(--accentColor1);
 }
+.mba-item:hover a{
+  color: white;
 
+}
 /* 📱 Mobile (stacked) */
 @media (max-width: 768px) {
   .mba-container {
