--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -205,4 +205,8 @@
   .belowFooter > li:nth-child(1) {
     margin-top: 30px;
   }
+  .footerAddress{
+    /* border: solid red; */
+    margin-bottom: 30px;
+  }
 }
