--- a/src/components/Styles.css
+++ b/src/components/Styles.css
@@ -679,6 +679,9 @@ details[open] .faq-answer {
     font-size: 1rem;
   }
 }
+
+/* ---------------------------Carousel--------------------------------------- */
+
 .carouselItem {
   width: 100%;
 }
